--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <body>
         <h1>My Second Website.</h1>
-        <h3>Look mama! I can push github.</h3>
+        <p>Feeling Happy</p>
+        <p>I am a goast.</p>
     </body>
 </html>
