--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <p>Feeling Happy</p>
         <p>I am a goast.</p>
         <p>I am shawon</p>
+        <input type="text">
+        <br>
         <button>Clic me</button>
     </body>
 </html>
